[metadata]
name = networking_asr
summary = This project tracks the work to provide a ML2 components to work with the existing Cisco ASR L3 components
version = 2015.1.1
description-file =
    README.rst
license = Apache License, Version 2.0
author = SAP SE
author-email = andrew.battye@sap.com
home-page = http://www.sap.com/
url = https://github.com/sapcc/networking-asr
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords = openstack neutron ASR networking

[files]
[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_asr/locale
domain = networking-asr

[update_catalog]
domain = networking-asr
output_dir = networking_aci/locale
input_file = networking_aci/locale/networking-asr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_aci/locale/networking-asr.pot

[entry_points]
neutron.ml2.mechanism_drivers =
    asr = networking_aci.plugins.ml2.drivers.mech_asr.driver:CiscoASRMechanismDriver
